fixed search click on mobile

--- a/app/styles/_login.scss
+++ b/app/styles/_login.scss
@@ -217,6 +217,10 @@ footer {
 footer .list-inline {
   margin: 0;
   padding: 0;
+
+  a{
+    color: $primary-color;
+  }
 }
 footer .copyright {
   font-size: 14px;
