--- a/app/styles/_menu.scss
+++ b/app/styles/_menu.scss
@@ -111,7 +111,7 @@
     }
 
     .search-box{
-        width: 300px !important;
+        width: 85% !important;
         float: left;
     }
 
